# pfb-eval

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
docs/: index.html  results.json
src/: main.py
src/demos/vaxbot/: client.py  system_prompt.md
src/demos/vaxbot/corpus/: facts.json  personas.json  prompts.json
src/eval/: _judge_io.py  bias.py  cache.py  f_consistency.py  llm_client.py  log.py  manifest.py  p_fact.py  runner.py  schemas.py
src/eval/judge_prompts/: claim_extraction.md  claim_verification.md  consistency_likert.md  recommendation_comparison.md  recommendation_extraction.md
src/report/: generate.py
src/report/templates/: index.html.j2
tests/: test_bias.py  test_cache.py  test_cost.py  test_f_consistency.py  test_manifest.py  test_p_fact.py  test_runner_bootstrap.py  test_schemas.py
